--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,3 +6,22 @@ body {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #7a7f9a;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #303b82;
+}
+
+/* Handle on Hover */
+::-webkit-scrollbar-track:hover {
+  background: #a1a9dd;
+}
